modif on video game pages => blog format in progress

--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -27,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 10 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 14 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Chase Tag</h1>
     </section>
@@ -35,13 +39,15 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column">
-                <p><b>#Unity</b> <b>#Photon Unity Networking 2</b></p><br>
-                <p>At the start of october 2022 I started making an online chase tag game after work. I had wanted to learn about multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny. This game is still a work in progress but you can try a prototype by clicking on the button below !</p><br>
-                <a class="btn1" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank">Discover the game</a>
-      </div>
-            <div class="div-column" style="width: 60%; margin-left : 10px;">
+            <div class="div-column" style="width: 70%;">
+                <p><b>#Online multiplayer</b></p>
+                <p>At the start of october 2022 I started making an online chase tag game after work. I had wanted to learn about multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny. This game is still a work in progress but you can try a prototype by clicking on the button on the right !</p>
                 <img src="../../../img/video-games/chase-tag/ct-gameplay1.gif">
+      </div>
+            <div class="div-column" style="width: 30%; margin-left : 10px;">
+                <p>Unity, Photon Unity Networking 2</p>
+                <a class="btn1" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank">Discover the game</a>
+
             </div>
     </section>
 
