--- a/html/projects/video-games/eba-effect.html
+++ b/html/projects/video-games/eba-effect.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -28,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 56 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 45 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>EBA Effect</h1>
     </section>
@@ -66,10 +69,9 @@
             </div>         
         </div>
 
-        <div class="div-column" style="width: 40%; margin-left : 50px;">
-            <p>2022-23 | 2m | School Project | Oculus Quest 2 / Computer</p>
-            <p>Tools : Unity, Blender, DOTween</p><br>
-
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <p>2022-23 | 2 months | School Project | Oculus Quest 2</p>
+            <p>Tools : Unity</p><br>
             <a class="btn1" href="https://atoxm.itch.io/dynasty" target="_blank">Discover the game</a>
         </div>
     </section>
