--- a/html/projects/video-games/overboss.html
+++ b/html/projects/video-games/overboss.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -38,7 +41,6 @@
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
             <p id="hashtags"><b>#Boardgame adaptation</b> <b>#Rhythm Game</b> <b>#Optimisation</b> <b>#Level Editor</b></p><br>
-            <p>Overboss</p><br>
             <p>EBA Effect is a first person shooter where you need to put down targets in rhythm with the music, a bit like Elite Beat Agents but in 3D. I learned a lot making this game, and we faced multiple challenges.</p><br>
             <p>Two other inspirations we had were OSU and Beat Saber. In both those games, people are able to create their levels and play them which was a feature we really wanted in our game, both for our level designers and futur players. We couldn't go placing all our targets directly in Unity which would have taken too much time and been super non-efficient.</p><br>
             <img src="../../../img/video-games/eba-effect/ee-menu.gif"><br>
