--- a/html/projects/video-games/chloe-au-musee.html
+++ b/html/projects/video-games/chloe-au-musee.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -27,7 +30,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 10 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 15 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Chloé au Musée</h1>
     </section>
@@ -35,20 +38,23 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column">
-            <p><b>#Phaser 3</b></p><br>
-            <p>During the project "Rêve et Ville" ("Dream and City") at the beginning of year 2022, I had the opportunity to create an interactive experience about the Musée des Beaux-Arts of Bordeaux. We worked in team of five and I specialized in the JS development using Phaser3. It was a completely new tech for me and I learned a lot in little time. Then again, the freeCodeCamp JS formation was pretty useful.</p><br>
-            <img src="../../../img/video-games/chloe-au-musee/cam-gameplay1.gif" style="width: 100%;"><br>
-            <p>One of the peculiarities of this game was that it needed to be playable from a phone since it was made for the visitors of the museum (who didn't have a computer access). So we had to make sure that it was as responsive as possible.</p><br>
-            <p>Only con was that the sound design was sketchy as it had been done at the last moment and under hard time constraints.</p><br>
-            <a class="btn1" href="https://chloe-au-musee.netlify.app/" target="_blank">Discover the game</a>
-        </div>
-        <div class="div-column" style="width: 40%; margin-left : 10px;">
+        <div class="div-column" style="width: 70%;">
+            <p><b>#Musée des Beaux Arts</b> <b>#Online mobile first</b></p>
+            <p>During the project "Rêve et Ville" ("Dream and City") at the beginning of year 2022, I had the opportunity to create an interactive experience about the Musée des Beaux-Arts of Bordeaux. We worked in team of five and I specialized in the JS development using Phaser3. It was a completely new tech for me and I learned a lot in little time. Then again, the freeCodeCamp JS formation was pretty useful.</p>
+            <img src="../../../img/video-games/chloe-au-musee/cam-gameplay1.gif" style="width: 100%;">
+            <p>One of the peculiarities of this game was that it needed to be playable from a phone since it was made for the visitors of the museum (who didn't have a computer access). So we had to make sure that it was as responsive as possible.</p>
+            <p>Only con was that the sound design was sketchy as it had been done at the last moment and under hard time constraints.</p>
+            
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone1.jpg" style="width: 49%;">
-                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone2.jpg" style="width: 49%;">
+                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee1.png" style="width: 49%;"><br>
+                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone1.jpg" style="width: 24%;">
+                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone2.jpg" style="width: 24%;">
             </div><br>
-            <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee1.png"><br>
+        </div>
+        <div class="div-column" style="width: 30%; margin-left : 10px;">
+            <p>Phaser 3</p>
+            <a class="btn1" href="https://chloe-au-musee.netlify.app/" target="_blank">Discover the game</a>
+
         </div>
     </section>
 
