--- a/html/projects/video-games/sandwalkers.html
+++ b/html/projects/video-games/sandwalkers.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -27,7 +30,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 32 + .1em); "></div>
     <section id="landing-blog-section">
         <h1>Sandwalkers</h1>
     </section>
@@ -35,20 +38,24 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column">
+            <div class="div-column" style="width: 70%;">
+                <p id="hashtags"><b>#Map Editor</b> <b>#Tool development</b> <b>#GoblinzStudio</b></p><br>
                 <p>During my internship at TavroxGames I had the occasion to work for a month and a half with GoblinzStudio on the game Sandwalkers. I first created a map editor which would help level designer to build complex levels easily and directly from the game.</p><br>
                 <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor2.gif" style="width: 100%;"><br>
+                <p>The map editor allowed the user to create a map with the dimensions they prefered, showing or not the mountains that appear on the sides of the world in game. You could load and save your work, modify each cell's biome, generate the same environment for the whole map, put decorations, places, ennemies, point of interest... This tool made it possible to make a whole map without having to go through Unity's interface.</p><br>
                 <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/sandwalkers/sandwalkers-end-fight-menu.gif" style="width: 49%;">
+                    <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor1.gif" style="width: 49%;"><br>
                     <img src="../../../img/video-games/sandwalkers/sandwalkers-title.png" style="width: 49%;">
                 </div>
-            </div>
-            <div class="div-column" style="width: 40%; margin-left : 10px;">
-                <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor1.gif"><br>
-                <p>The map editor allowed the user to create a map with the dimensions they prefered, showing or not the mountains that appear on the sides of the world in game. You could load and save your work, modify each cell's biome, generate the same environment for the whole map, put decorations, places, ennemies, point of interest... This tool made it possible to make a whole map without having to go through Unity's interface.</p><br>
                 <p>Later on, I started working on the game itself. First I helped to integrate a few tooltips, then I was given more difficult missions, such as bug solving and making up the entire end fight menu from a mockup.</p><br>
+                <img src="../../../img/video-games/sandwalkers/sandwalkers-end-fight-menu.gif">
 
-                <p>It was pretty exciting working on a game like that, with lots of people, a community behind it and I can't wait to see the final game with my own eyes !</p><br>
+                <p>It was pretty exciting working on a game like that, with lots of people, a community behind it and I can't wait to see the final experience with my own eyes !</p><br>
+            
+            </div>
+            <div class="div-column" style="width: 30%; margin-left : 10px;">
+                <p>2022 | 1m | GoblinzStudio</p>
+                <p>Tools : Unity</p><br>
                 <a class="btn1" href="https://store.steampowered.com/app/1639080/Sandwalkers/" target="_blank">Discover the game</a>
             </div>
     </section><br>
