--- a/html/projects/video-games/thief-tales.html
+++ b/html/projects/video-games/thief-tales.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -27,7 +30,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 16 + .1em); "></div>
     <section id="landing-blog-section">
         <h1>Thief Tales</h1>
     </section>
