qatp whole page done

--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -41,7 +41,7 @@
     <section id="blog-section" class="div-row">
             <div class="div-column" style="width: 70%;">
                 <p><b>#Online multiplayer</b></p>
-                <p>At the start of october 2022 I started making an online chase tag game after work. I had wanted to learn about multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny. This game is still a work in progress but you can try a prototype by clicking on the button on the right !</p>
+                <p>In october 2022 I started making an online chase tag game after work. I had wanted to learn about multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny. This game is still a work in progress but you can try a prototype by clicking on the button on the right !</p>
                 <img src="../../../img/video-games/chase-tag/ct-gameplay1.gif">
       </div>
             <div class="div-column" style="width: 30%; margin-left : 10px;">
