--- a/html/projects/video-games/chloe-au-musee.html
+++ b/html/projects/video-games/chloe-au-musee.html
@@ -46,10 +46,10 @@
             <p>Only con was that the sound design was sketchy as it had been done at the last moment and under hard time constraints.</p>
             
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee1.png" style="width: 49%;"><br>
+                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee1.png" style="width: 49%;">
                 <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone1.jpg" style="width: 24%;">
                 <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone2.jpg" style="width: 24%;">
-            </div><br>
+            </div>
         </div>
         <div class="div-column" style="width: 30%; margin-left : 10px;">
             <p>Phaser 3</p>
