--- a/html/projects/video-games/creeping-deck.html
+++ b/html/projects/video-games/creeping-deck.html
@@ -39,18 +39,18 @@
 
     <section id="blog-section" class="div-row">
             <div class="div-column" style="width: 70%;">
-                <p><b>#Unity</b> <b>#DOTween</b> <b>#Odin Inspector</b></p><br>
-                <p>To start off my apprenticeship at TavroxGames, I had the occasion to work on Creeping deck : Pharaoh's curse, a deckbuilding game on the theme of Egyptian mythology. I only worked three weeks on the project, mainly on FX. Things such as a text indicating the number of damage popping on the screen, the chest opening or the arrow following the mouse in fight. I also worked on making it possible to have multiple ennemies in fight.</p><br>
+                <p><b>#Unity</b> <b>#DOTween</b> <b>#Odin Inspector</b></p>
+                <p>To start off my apprenticeship at TavroxGames, I had the occasion to work on Creeping deck : Pharaoh's curse, a deckbuilding game on the theme of Egyptian mythology. I only worked three weeks on the project, mainly on FX. Things such as a text indicating the number of damage popping on the screen, the chest opening or the arrow following the mouse in fight. I also worked on making it possible to have multiple ennemies in fight.</p>
                 <div class="div-row" style="width: 100%;">
                     <img src="../../../img/video-games/creeping-deck/cd-arrow.gif" style="width: 49%;">
                     <img src="../../../img/video-games/creeping-deck/cd-fight.gif" style="width: 49%;">
-                </div><br>
-                <img src="../../../img/video-games/creeping-deck/cd-chest.gif"><br>
+                </div>
+                <img src="../../../img/video-games/creeping-deck/cd-chest.gif">
 
       </div>
             <div class="div-column" style="width: 30%; margin-left : 10px;">
                 <p>1month / 2022-23, computer, Professional, </p>
-                <p>Tools : Unity, Blender, DOTween</p><br>
+                <p>Tools : Unity, Blender, DOTween</p>
                 <a class="btn1" href="https://store.steampowered.com/app/2167550/Creeping_Deck_Pharaohs_Curse/" target="_blank">Discover the game</a>
 
             </div>
