--- a/html/projects/video-games/find-the-way-back.html
+++ b/html/projects/video-games/find-the-way-back.html
@@ -54,7 +54,7 @@
         </div>
         <div class="div-column" style="width: 30%; margin-left : 10px;">
             <p>2022 | 2 days | Game Jam</p>
-            <p>Tools : Unity</p><br>
+            <p>Tools : Unity</p>
             <a class="btn1" href="https://alvina-dr.itch.io/find-the-way-back" target="_blank">Discover the game</a>
         </div>
     </section>
