--- a/html/projects/video-games/hfc.html
+++ b/html/projects/video-games/hfc.html
@@ -39,18 +39,16 @@
 
     <section id="blog-section" class="div-row">
             <div class="div-column" style="width: 70%;">
-                <p><b>#Walking Simulator</b> <b>#Narrative Design</b></p><br>
-                <p>The final project of our vocational degree at MIAMI was to make a walking simulator in Unreal Engine. We had two months to familiarize ourselves with the software, think through the story, level design and the message we wanted to convey. This was the occasion to work in larger groups than usual (six people) and to learn a lot more about team work and management.</p><br>
+                <p><b>#Walking Simulator</b> <b>#Narrative Design</b></p>
+                <p>The final project of our vocational degree at MIAMI was to make a walking simulator in Unreal Engine. We had two months to familiarize ourselves with the software, think through the story, level design and the message we wanted to convey. This was the occasion to work in larger groups than usual (six people) and to learn a lot more about team work and management.</p>
                 <p>Inspired by <a>Life Is Strange</a>, <a>What Remains of Edith Finch</a> and <a>Doki Doki Literature Club</a>, our game talks about privacy on the Internet and cybersecurity (under the guise of a Christmas ).</p>
 
                 <h3>Accessibility</h3>
-                <p>One of the main focus of our game was accessiblity : we wanted to make it pleasant to play for the most people possible. First of all, we implemented control remapping and gamepad compatibility. </p><br>
-
-                <p></p>
-
-                <iframe width="100%" height="450" src="https://www.youtube.com/embed/dvhsVfpaxz0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
-                <iframe width="100%" height="450" src="https://www.youtube.com/embed/XMzAdImk-UU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
-                <iframe width="100%" height="450" src="https://www.youtube.com/embed/ETVf-kdi2EM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+                <p>One of the main focus of our game was accessiblity : we wanted to make it pleasant to play for the most people possible. First of all, we implemented control remapping and gamepad compatibility. </p>
+                
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/dvhsVfpaxz0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/XMzAdImk-UU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/ETVf-kdi2EM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <iframe width="100%" height="450" src="https://www.youtube.com/embed/ZHoMSfKOjQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
             <div class="div-column" style="width: 30%; margin-left : 10px;">
