--- a/html/projects/video-games/pokemon-memory.html
+++ b/html/projects/video-games/pokemon-memory.html
@@ -39,15 +39,15 @@
 
     <section id="blog-section" class="div-row">
             <div class="div-column">
-                <p><b>#React</b></p><br>
-                <p>In November 2021, we had a React workshop during my DHE. As I already had learned a bit of JS thanks to freeCodeCamp, I decided to realise a pokemon memory with my partner.</p><br>
+                <p><b>#React</b></p>
+                <p>In November 2021, we had a React workshop during my DHE. As I already had learned a bit of JS thanks to freeCodeCamp, I decided to realise a pokemon memory with my partner.</p>
 
-                <img src="../../../img/video-games/pokemon-memory/pm-gameplay1.gif" style="width: 100%;"><br>
+                <img src="../../../img/video-games/pokemon-memory/pm-gameplay1.gif" style="width: 100%;">
             </div>
             <div class="div-column" style="width: 40%; margin-left : 10px;">
-                <img src="../../../img/video-games/pokemon-memory/pm-gameplay2.gif"><br>
-                <p>The website is in english and is responsive. There is a first tab to explain the game and then the game itself. The goal is to discover as much pairs as you can in 60 seconds. The pairs of pokemon that you find will go into your pokedex. The aim ? To catch them all !</p><br>
-                <p>I am really proud of this funny game and consider this workshop a success.</p><br>
+                <img src="../../../img/video-games/pokemon-memory/pm-gameplay2.gif">
+                <p>The website is in english and is responsive. There is a first tab to explain the game and then the game itself. The goal is to discover as much pairs as you can in 60 seconds. The pairs of pokemon that you find will go into your pokedex. The aim ? To catch them all !</p>
+                <p>I am really proud of this funny game and consider this workshop a success.</p>
                 <a class="btn1" href="https://pokemon-memory-online.netlify.app/" target="_blank">Discover the game</a>
             </div>
     </section>
