--- a/html/projects/video-games/sandwalkers.html
+++ b/html/projects/video-games/sandwalkers.html
@@ -39,26 +39,26 @@
 
     <section id="blog-section" class="div-row">
             <div class="div-column" style="width: 70%;">
-                <p id="hashtags"><b>#Map Editor</b> <b>#Tool development</b> <b>#GoblinzStudio</b></p><br>
-                <p>During my internship at TavroxGames I had the occasion to work for a month and a half with GoblinzStudio on the game Sandwalkers. I first created a map editor which would help level designer to build complex levels easily and directly from the game.</p><br>
-                <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor2.gif" style="width: 100%;"><br>
-                <p>The map editor allowed the user to create a map with the dimensions they prefered, showing or not the mountains that appear on the sides of the world in game. You could load and save your work, modify each cell's biome, generate the same environment for the whole map, put decorations, places, ennemies, point of interest... This tool made it possible to make a whole map without having to go through Unity's interface.</p><br>
+                <p id="hashtags"><b>#Map Editor</b> <b>#Tool development</b> <b>#GoblinzStudio</b></p>
+                <p>During my internship at TavroxGames I had the occasion to work for a month and a half with GoblinzStudio on the game Sandwalkers. I first created a map editor which would help level designer to build complex levels easily and directly from the game.</p>
+                <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor2.gif" style="width: 100%;">
+                <p>The map editor allowed the user to create a map with the dimensions they prefered, showing or not the mountains that appear on the sides of the world in game. You could load and save your work, modify each cell's biome, generate the same environment for the whole map, put decorations, places, ennemies, point of interest... This tool made it possible to make a whole map without having to go through Unity's interface.</p>
                 <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor1.gif" style="width: 49%;"><br>
+                    <img src="../../../img/video-games/sandwalkers/sandwalkers-map-editor1.gif" style="width: 49%;">
                     <img src="../../../img/video-games/sandwalkers/sandwalkers-title.png" style="width: 49%;">
                 </div>
-                <p>Later on, I started working on the game itself. First I helped to integrate a few tooltips, then I was given more difficult missions, such as bug solving and making up the entire end fight menu from a mockup.</p><br>
+                <p>Later on, I started working on the game itself. First I helped to integrate a few tooltips, then I was given more difficult missions, such as bug solving and making up the entire end fight menu from a mockup.</p>
                 <img src="../../../img/video-games/sandwalkers/sandwalkers-end-fight-menu.gif">
 
-                <p>It was pretty exciting working on a game like that, with lots of people, a community behind it and I can't wait to see the final experience with my own eyes !</p><br>
+                <p>It was pretty exciting working on a game like that, with lots of people, a community behind it and I can't wait to see the final experience with my own eyes !</p>
             
             </div>
             <div class="div-column" style="width: 30%; margin-left : 10px;">
                 <p>2022 | 1m | GoblinzStudio</p>
-                <p>Tools : Unity</p><br>
+                <p>Tools : Unity</p>
                 <a class="btn1" href="https://store.steampowered.com/app/1639080/Sandwalkers/" target="_blank">Discover the game</a>
             </div>
-    </section><br>
+    </section>
 
     <section class="div-row other-projects">
         <button id='left-project-button' class="next-project-button">◄</button>
