--- a/html/projects/video-games/thief-tales.html
+++ b/html/projects/video-games/thief-tales.html
@@ -39,16 +39,16 @@
 
     <section id="blog-section" class="div-row">
             <div class="div-column">
-                <p>The second game jam we made in collaboration with ENSEIRB was at the end of my second year of DHE. It led to the creation of Thief Tales a compilation of mini game packed inside a thief story.</p><br>
-                <img src="../../../img/video-games/thief-tales/tt-gameplay1.gif" style="width: 100%;"><br>
+                <p>The second game jam we made in collaboration with ENSEIRB was at the end of my second year of DHE. It led to the creation of Thief Tales a compilation of mini game packed inside a thief story.</p>
+                <img src="../../../img/video-games/thief-tales/tt-gameplay1.gif" style="width: 100%;">
                 <div class="div-row" style="width: 100%;">
                     <img src="../../../img/video-games/thief-tales/tt-gameplay3.gif" style="width: 49%;">
                     <img src="../../../img/video-games/thief-tales/tt-gameplay4.gif" style="width: 49%;">
                 </div>
             </div>
             <div class="div-column" style="width: 40%; margin-left : 10px;">
-                <img src="../../../img/video-games/thief-tales/tt-gameplay2.gif"><br>
-                <p>I mainly worked on the race game and it was super fun to do because it looked a lot like Those Who Remain, a previous game we made in school with some friends. This time it took me way less time and I knew how to proceed from the start.</p><br>
+                <img src="../../../img/video-games/thief-tales/tt-gameplay2.gif">
+                <p>I mainly worked on the race game and it was super fun to do because it looked a lot like Those Who Remain, a previous game we made in school with some friends. This time it took me way less time and I knew how to proceed from the start.</p>
                 <a class="btn1" href="https://najouille.itch.io/thief-tales" target="_blank">Discover the game</a>
             </div>
     </section>
