--- a/html/projects/video-games/dynasty.html
+++ b/html/projects/video-games/dynasty.html
@@ -40,27 +40,27 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p><b>#Unity</b> <b>#DOTween</b> <b>#Oculus Quest 2</b></p><br>
-            <p>EBA effect is a VR game inspired by Elite Beat Agents. We had five weeks spreaded from October to November 2022 to create it. Our team of four was well equilibrated and we had a level/game designer, a sound/music designer, a 3D artist and myself who worked on the programming side of the game.</p><br>
-            <p>EBA Effect is a first person shooter where you need to put down targets in rhythm with the music, a bit like Elite Beat Agents but in 3D. I learned a lot making this game, and we faced multiple challenges.</p><br>
-            <p>Two other inspirations we had were OSU and Beat Saber. In both those games, people are able to create their levels and play them which was a feature we really wanted in our game, both for our level designers and futur players. We couldn't go placing all our targets directly in Unity which would have taken too much time and been super non-efficient.</p><br>
+            <p><b>#Unity</b> <b>#DOTween</b> <b>#Oculus Quest 2</b></p>
+            <p>EBA effect is a VR game inspired by Elite Beat Agents. We had five weeks spreaded from October to November 2022 to create it. Our team of four was well equilibrated and we had a level/game designer, a sound/music designer, a 3D artist and myself who worked on the programming side of the game.</p>
+            <p>EBA Effect is a first person shooter where you need to put down targets in rhythm with the music, a bit like Elite Beat Agents but in 3D. I learned a lot making this game, and we faced multiple challenges.</p>
+            <p>Two other inspirations we had were OSU and Beat Saber. In both those games, people are able to create their levels and play them which was a feature we really wanted in our game, both for our level designers and futur players. We couldn't go placing all our targets directly in Unity which would have taken too much time and been super non-efficient.</p>
             <div class="div-row" style="width: 100%;">
                 <img src="../../../img/video-games/eba-effect/ee-csv1.jpg" style="width: 49%;">
                 <img src="../../../img/video-games/eba-effect/ee-target-data.jpg" style="width: 49%;">
-            </div><br>
+            </div>
             <div class="div-row" style="width: 100%;">
                 <img src="../../../img/video-games/eba-effect/ee-prototype1.gif" style="width: 49%;">
                 <img src="../../../img/video-games/eba-effect/ee-gameplay1.jpg" style="width: 49%;">
-            </div><br>
-            <p>Now, never having done a game in virtual reality before EBA Effect (nor played one, which led to my discovering of a profound addiction to Beat Saber), the setup of the game was also quite a challenge. Making the guns in game follow the controllers, turning the camera with the headset, clicking on UI with lasers, etc. It can be quite a pain knowing there are different types of VR headsets, multiple packages with their own specificities and several ways of getting input with Unity. When you don't have any experience with all that, you just dive in with what seems the best on internet, not fully knowing why it works this or that way or if it's compatible with what your really want to do.</p><br>
-            <p>Well it worked out in the end didn't it ?</p><br>
-            <p>Another big problem that we faced was performance. With the Oculus Quest 2 you can either launch a game on a computer and link the headset to it (and then you have the computer's performances) or build an apk in Unity and import it on the Oculus (and then play without a cable in the way). With the first solution everything worked pretty well but when we went to do an APK it was an absolute nightmare. About five fps, impossible to play, especially when you are making a rhythm game. Which is how I started making research on how to optimise a lot of stuff.</p><br>
+            </div>
+            <p>Now, never having done a game in virtual reality before EBA Effect (nor played one, which led to my discovering of a profound addiction to Beat Saber), the setup of the game was also quite a challenge. Making the guns in game follow the controllers, turning the camera with the headset, clicking on UI with lasers, etc. It can be quite a pain knowing there are different types of VR headsets, multiple packages with their own specificities and several ways of getting input with Unity. When you don't have any experience with all that, you just dive in with what seems the best on internet, not fully knowing why it works this or that way or if it's compatible with what your really want to do.</p>
+            <p>Well it worked out in the end didn't it ?</p>
+            <p>Another big problem that we faced was performance. With the Oculus Quest 2 you can either launch a game on a computer and link the headset to it (and then you have the computer's performances) or build an apk in Unity and import it on the Oculus (and then play without a cable in the way). With the first solution everything worked pretty well but when we went to do an APK it was an absolute nightmare. About five fps, impossible to play, especially when you are making a rhythm game. Which is how I started making research on how to optimise a lot of stuff.</p>
             <p>We didn't have a lot of time so a lot of the environment was badly organised, prefab multiplied, objects invisible but still there, it wasn't pretty. Cleaning up this mess was the first step. Then I started to look into the clouds that I had done weeks earlier with the Unity particle system. Reducing the number of particles and making them bigger instead, making the particles life time longer and looping, pausing them when out of the player's view (culling). Quickly enough we got to a pretty good fps.</p>
         </div>
         
         <div class="div-column" style="width: 30%; margin-left : 10px;">          
             <p>2022-23 | 2 months | School Project | Oculus Quest 2</p>
-            <p>Tools : Unity, Blender, DOTween</p><br>
+            <p>Tools : Unity, Blender, DOTween</p>
             <a class="btn1" href="https://atoxm.itch.io/dynasty" target="_blank">Discover the game</a>
         </div>
     </section>
