--- a/html/projects/video-games/protectors-of-pomelo.html
+++ b/html/projects/video-games/protectors-of-pomelo.html
@@ -61,7 +61,7 @@
             </div>
             <div class="div-column" style="width: 30%; margin-left : 10px;">
                 <p>2022 | 2m | TavroxGames</p>
-                <p>Tools : Unity, DOTween, OdinInspector</p><br>
+                <p>Tools : Unity, DOTween, OdinInspector</p>
                 <a class="btn1" href="https://tavrox.itch.io/protectors-of-pomelo" target="_blank">Discover the game</a>
 
             </div>
