--- a/html/projects/video-games/qatp.html
+++ b/html/projects/video-games/qatp.html
@@ -31,47 +31,41 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 56 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 46 + .1em);"></div>
     <section id="landing-blog-section">
-        <h1>EBA Effect</h1>
+        <h1>QATP</h1>
     </section>
 
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p id="hashtags"><b>#Virtual Reality</b> <b>#Rhythm Game</b> <b>#Optimisation</b> <b>#Level Editor</b></p><br>
-            <p>EBA Effect is a VR game inspired by <a href="https://fr.wikipedia.org/wiki/Elite_Beat_Agents" target="_blank">Elite Beat Agents</a>. We had five weeks spreaded from October to November 2022 to create it. Our team of four was composed of a level/game designer, a sound/music designer, a 3D artist and myself who worked on the programming side of the game.</p><br>
-            <p>EBA Effect is a first person shooter where you need to put down targets in rhythm with the music, a bit like Elite Beat Agents but in 3D. I learned a lot making this game, and we faced multiple challenges.</p><br>
-            <p>Two other inspirations we had were <a href="https://fr.wikipedia.org/wiki/Osu!" target="_blank">OSU</a> and <a href="https://store.steampowered.com/app/620980/Beat_Saber/" target="_blank">Beat Saber</a>. In both those games, people are able to create their levels and play them which was a feature we really wanted in our game, both for our level designers and futur players. We couldn't go placing all our targets directly in Unity which would have taken too much time and been super non-efficient.</p><br>
-            <img src="../../../img/video-games/eba-effect/ee-menu.gif"><br>
-            <h3>Level editor</h3>
-            <p>One of the first things we did was design a .csv file, basically a table you can open in excel. We thought of three columns : spawn time, life duration and spawn position. In other words : the time in the music at which the target should spawn, how long the target would stay on screen (if you don't shoot it in time it disapears and you loose life) and where it should spawn in the scene. Of course, this organisation would change a lot in the future but those were the basics we needed.</p><br>
-            <p>I then made a script in Unity that would read the .csv file and put each line of the table in a TargetData scriptable object. Then, when I had the list of all targets data in the file (which happens when you launch the level), the chrono would start. Each time the chrono was above or equal to the spawn time of a target, the target would spawn.</p><br>
-            <p>You can shoot with both hands (which usually amounts to a grand total of two) and to make the game more difficult, some targets give double the points if shot by the good hand. The target's good side was added to the csv file making it a column larger. In the game, the side is indicated by a color, red for left, blue for right.</p><br>
-            <p>Each .csv file is an entire level, putted in the "Resources" folder of the Assets. Now, just the targets data wasn't enough, we also needed the name of the music to play, how long it would last, the bpm and a bunch of stuff like that. All those unique informations were written at the start of the .csv file, always in the same order and then interpreted in Unity.</p><br>
+            <p id="hashtags"><b>#Hackathon</b> <b>#Traceabilty</b> <b>#Laval Virtual</b> </p>
+            <p>In april 2023, I had the chance to take part in the Laval Virtual, a huge virtual/augmented reality event in Europe. Encouraged by our teachers back in Tarbes, we participated to the student limited time competition (fancy name for hackathon). We were against ten other teams from schools all around the world and had to conceive a whole experience / game / application in 30 hours on the theme of "Collaborative XR for industry". A secondary theme per team was also assigned and ours was "Traceabilty".</p>
+            <p>Those was born Quality Assurance Test Protocol. Heavily inspired by <a href="https://keeptalkinggame.com/" target="_blank">Keep Talking and Nobody Explodes</a>, QATP is an asymetric video game where two players try to collaborate and decipher wheter or not a prosthesis is authentic and functional. One of the player is inside the virtual reality headset and can inspect the prosthesis and the other has access to a manual (paper or pdf version) with multiple informations on how to trace back the product's origins.</p>
+            <p>I mainly contributed to the gameplay programming and game design side of this project. The whole thing was super stressful and an hour before the end of the time the project was absolutely broken. But we got through and delivered a playable version in which bugs were hidden enough not to be noticed.</p>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/bRQ96djZfvw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h3>Winner of hackathon 2023</h3>
+            <p>And we won ! I could use a lot of words to describe our joy but I'll spare you : we were super happy. I usually don't have many pictures of us making video games cause it's just us hiding in the dark behind screens but for this project we actually have tons of them. Oh, and we each won a Oculus Quest 2 which is absolutelly wonderful and means I'll be able to continue programming games in VR.</p>
+            <img src="../../../img/video-games/qatp/laval-picture1.jpg" style="width: 100%;">
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/eba-effect/ee-csv1.jpg" style="width: 49%;">
-                <img src="../../../img/video-games/eba-effect/ee-target-data.jpg" style="width: 49%;">
-            </div><br>
-            <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/eba-effect/ee-prototype1.gif" style="width: 49%;">
-                <img src="../../../img/video-games/eba-effect/ee-gameplay1.jpg" style="width: 49%;">
-            </div><br>
-            <p>Now, never having done a game in virtual reality before EBA Effect (nor played one, which led to my discovering of a profound addiction to Beat Saber), the setup of the game was also quite a challenge. Making the guns in game follow the controllers, turning the camera with the headset, clicking on UI with lasers, etc. It can be quite a pain knowing there are different types of VR headsets, multiple packages with their own specificities and several ways of getting input with Unity. When you don't have any experience with all that, you just dive in with what seems the best on internet, not fully knowing why it works this or that way or if it's compatible with what your really want to do.</p><br>
-            <p>Well it worked out in the end didn't it ?</p><br>
-            <h3>Performance</h3>
-            <p>Another big problem that we faced was performance. With the Oculus Quest 2 you can either launch a game on a computer and link the headset to it (and then you have the computer's performances) or build an apk in Unity and import it on the Oculus (and then play without a cable in the way). With the first solution everything worked pretty well but when we went to do an APK it was an absolute nightmare. About five fps, impossible to play, especially when you are making a rhythm game. Which is how I started making research on how to optimise a lot of stuff.</p><br>
-            <p>We didn't have a lot of time so a lot of the environment was badly organised, prefab multiplied, objects invisible but still there, it wasn't pretty. Cleaning up this mess was the first step. Then I started to look into the clouds that I had done weeks earlier with the Unity particle system. Reducing the number of particles and making them bigger instead, making the particles life time longer and looping, pausing them when out of the player's view (culling). Quickly enough we got to a pretty good fps.</p><br>
-            <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/eba-effect/ee-pause-ui.jpg" style="width: 49%;">
-                <img src="../../../img/video-games/eba-effect/ee-prototype2.gif" style="width: 49%;">
-            </div>         
+                <div class="div-column" style="width: 49%;">
+                    <img src="../../../img/video-games/qatp/laval-picture2.jpg" style="width: 100%;">
+                    <img src="../../../img/video-games/qatp/laval-picture3.jpg" style="width: 100%; height: ;">
+                </div>
+                <img src="../../../img/video-games/qatp/laval-trophy.jpg" style="width: 49%;">
+
+            </div>
+
+
+            <h3>Exhibition</h3>
+            <p>By winning the hackathon, we had gained the right to expose our game on the Laval Virtual exhibition. For four days, we were able to show QATP to professionals and the general public while working out the bugs on the side. This was a wonderful occasion and we met many many great people I will miss a lot.</p>
+            <p>A final word to say a huge thank you to all the people that helped us get there. First and foremost our teachers from Tarbes, who fought hard for us to be able to participate and without whom, all this adventure would have never existed. Then thanks to TavroxGames for letting me go in such a strainous period, we had a game scheduled for release just a few weeks later but they were very understanding. Thanks to the team of Laval Virtual for their fantastic job with the event. And finally, thanks to all my fellow classmates, those who were with me at the Laval Virtual and those who couldn't but still helped from the distance.</p>
         </div>
 
         <div class="div-column" style="width: 40%; margin-left : 50px;">
-            <p>2022-23 | 2m | School Project | Oculus Quest 2 / Computer</p>
-            <p>Tools : Unity, Blender, DOTween</p><br>
+            <p>2023 | 30 hours | Jam | Oculus Quest 2</p>
+            <p>Tools : Unity, DOTween, XR Interaction Toolkit</p>
 
             <a class="btn1" href="https://atoxm.itch.io/dynasty" target="_blank">Discover the game</a>
         </div>
