video game grid size fix

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -32,9 +32,7 @@
     
     <div class="grid grid-video-game-1"></div>
     <section id="landing-section">
-        <!-- <h1>Alvina</h1>
-        <p>2022</p> -->
-        <br>
+        <h1>Video games</h1>
     </section>
 
 <!------------------------------------------------------ VIDEO GAME -------------------------------------------->
